Update entry.sh